@@ -10,14 +10,15 @@ Description: 'MessagePack' is an efficient binary serialization format.
  faster and smaller. Small integers are encoded into a single byte, and
  typical short strings require only one extra byte in addition to the strings
  themselves.
- .
- This package provides headers from the 'msgpack-c' implementation for C 
+ .    
+ This package provides headers from the 'msgpack-c' implementation for C
  and C++(11) for use by R, particularly 'Rcpp'. The included 'msgpack-c'
  header are licensed under the Boost Software License (Version 1.0); the
- code added by this package as well the integrations are licensed under the
- GPL (>= 2).
+ code added by this package as well the integrations are licensed under 
+ the GPL (>= 2).
 Copyright: file inst/COPYRIGHTS
 License: GPL (>= 2)
-Imports: Rcpp 
+Imports: Rcpp
 LinkingTo: Rcpp
 BugReports: https://github.com/eddelbuettel/rcppmsgpack/issues
+RoxygenNote: 5.0.1
