@@ -1,6 +1,12 @@
 # This file was generated by Rcpp::compileAttributes
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+#' Simple MsgPack Example
+#' 
+#' @details The function provides a simple illustration of MessagePack.
+#' @return A boolean value of \code{TRUE} is returned, but the function exists
+#' for its side effect.
+#' @seealso The MessagePack documentation, particularly the msgpack-c examples.
 arrayEx <- function() {
     .Call('RcppMsgPack_arrayEx', PACKAGE = 'RcppMsgPack')
 }
